--- a/.babelrc
+++ b/.babelrc
@@ -1,16 +1,19 @@
+//{
+//  "env": {
+//    "test": {
+//      "presets": [
+//        [
+//          "@babel/preset-env",
+//          {
+//            "targets": {
+//              "node": "current"
+//            }
+//          }
+//        ]
+//      ]
+//    }
+//  }
+//}
 {
-  "env": {
-    "test": {
-      "presets": [
-        [
-          "@babel/preset-env",
-          {
-            "targets": {
-              "node": "current"
-            }
-          }
-        ]
-      ]
-    }
-  }
+  "presets":["es2015"]
 }
