--- a/package.json
+++ b/package.json
@@ -5,17 +5,23 @@
   "author": "zzyo96",
   "private": true,
   "scripts": {
-    "dev": "cross-env NODE_ENV=development nodemon server/index.js --watch server",
+    "dev": "cross-env NODE_ENV=development nodemon server/index.js --watch server --exec babel-node",
     "build": "nuxt build",
-    "start": "cross-env NODE_ENV=production node server/index.js",
+    "start": "cross-env NODE_ENV=production node server/index.js --exec babel-node",
     "generate": "nuxt generate",
     "test": "jest"
   },
   "dependencies": {
-    "nuxt": "^2.0.0",
+    "babel-cli": "^6.26.0",
+    "babel-core": "^6.26.3",
+    "babel-preset-es2015": "^6.24.1",
     "cross-env": "^5.2.0",
+    "eslint": "^3.18.0",
     "micro": "^9.3.3",
-    "micro-route": "^2.5.0"
+    "micro-route": "^2.5.0",
+    "node-sass": "^4.12.0",
+    "nuxt": "^2.0.0",
+    "sass-loader": "^8.0.0"
   },
   "devDependencies": {
     "nodemon": "^1.18.9",
