--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "babel-core": "^6.26.3",
     "babel-preset-es2015": "^6.24.1",
     "cross-env": "^5.2.0",
+    "element-ui": "^2.12.0",
     "eslint": "^3.18.0",
     "micro": "^9.3.3",
     "micro-route": "^2.5.0",
